@@ -397,6 +397,9 @@ Trunk (unreleased changes)
     HDFS-1908. Fix a NullPointerException in fi.DataTransferTestUtil.
     (szetszwo)
 
+    HDFS-1824. delay instantiation of file system object until it is
+     needed (linked to HADOOP-7207) (boryas)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
